fix overflow in chroma

--- a/assets/css/chroma.css
+++ b/assets/css/chroma.css
@@ -10,7 +10,7 @@
   background-color: #f7f7f7;
   -webkit-text-size-adjust: none;
   padding: 0.5em;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 /* Error */
